==> ZBT1314douhao/STM32F107VCT6/5、LCD/3、LCD显示ABCDEFG_EXE/user_lib/lcd_ssd1289.c <==
#include "stm32f1xx_hal.h"
#include "stm32f1xx_hal_gpio.h"
#include "lcd_ssd1289.h"
#include "delay.h"
#include "lcd_font.h"
#define LCD_WR_PIN			GPIO_PIN_14
#define LCD_WR_PORT			GPIOD
#define LCD_CS_PIN      	GPIO_PIN_7
#define LCD_CS_PORT     	GPIOC
#define LCD_RS_PIN      	GPIO_PIN_15
#define LCD_RS_PORT     	GPIOD
#define LCD_RD_PIN      	GPIO_PIN_13
#define LCD_RD_PORT     	GPIOD
#define LCD_DATA_PORT   	GPIOE

static void lcd_pin_config(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;
	
	  __HAL_RCC_GPIOC_CLK_ENABLE();
      __HAL_RCC_GPIOE_CLK_ENABLE();
      __HAL_RCC_GPIOD_CLK_ENABLE();
	
	GPIO_InitStructure.Pin   = GPIO_PIN_All;
	GPIO_InitStructure.Pin = GPIO_SPEED_LOW;
	GPIO_InitStructure.Pin  = GPIO_MODE_OUTPUT_PP;
	HAL_GPIO_Init(LCD_DATA_PORT, &GPIO_InitStructure);
	
	GPIO_InitStructure.Pin = LCD_WR_PIN;
	HAL_GPIO_Init(LCD_WR_PORT, &GPIO_InitStructure);
	GPIO_InitStructure.Pin = LCD_CS_PIN;
	HAL_GPIO_Init(LCD_CS_PORT, &GPIO_InitStructure);	
	GPIO_InitStructure.Pin = LCD_RS_PIN;
	HAL_GPIO_Init(LCD_RS_PORT, &GPIO_InitStructure);
	GPIO_InitStructure.Pin = LCD_RD_PIN;
	HAL_GPIO_Init(LCD_RD_PORT, &GPIO_InitStructure);	
}

static void lcd_write_reg(uint16_t reg,uint16_t value)
{
	lcd_reset_cs();
	lcd_reset_rs();
	lcd_reset_wr();
	GPIO_Write(LCD_DATA_PORT, reg);
	lcd_set_wr();

	lcd_set_rs();
	lcd_reset_wr(); 
	GPIO_Write(LCD_DATA_PORT, value);
	lcd_set_wr();
	lcd_set_cs();
}

static void lcd_ram_prepare(void)
{
	lcd_reset_cs();
	lcd_reset_rs();
	lcd_reset_wr();	 
	GPIO_Write(LCD_DATA_PORT, 0x22);
	lcd_set_wr();
	lcd_set_cs();
}

static void lcd_write_ram(uint16_t value)
{
	lcd_reset_cs();
	lcd_set_rs();
	lcd_reset_wr();	 
	GPIO_Write(LCD_DATA_PORT, value);
	lcd_set_wr();
	lcd_set_cs();
}

static void lcd_data_as_input(void)
{
  GPIO_InitTypeDef GPIO_InitStructure;  
  GPIO_InitStructure.Pin   = GPIO_PIN_All;
  GPIO_InitStructure.Speed = GPIO_SPEED_LOW;
  GPIO_InitStructure.Mode  = GPIO_MODE_INPUT;
  HAL_GPIO_Init(LCD_DATA_PORT, &GPIO_InitStructure);
}

static void lcd_data_as_output(void)
{
  GPIO_InitTypeDef GPIO_InitStructure;  
  GPIO_InitStructure.Pin   = GPIO_PIN_All;
  GPIO_InitStructure.Speed = GPIO_SPEED_LOW;
  GPIO_InitStructure.Mode  = GPIO_MODE_OUTPUT_PP;
  HAL_GPIO_Init(LCD_DATA_PORT, &GPIO_InitStructure);
}

static uint16_t lcd_read_sta(void)
{
    uint8_t i = 0;
	uint16_t value;
	
	lcd_reset_cs();
	lcd_set_rs();
	lcd_reset_rd(); 
	lcd_set_rd();
    for (i = 0; i < 15; i++)
    {
        value |= HAL_GPIO_ReadPin(LCD_DATA_PORT, GPIO_PIN_0);
    }
	lcd_set_cs();

	return value;
}
